<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConverterViewController" customModule="CurrencyConverter" customModuleProvider="target">
            <connections>
                <outlet property="currencyPicker" destination="D1J-nC-mP4" id="hha-rJ-Bsm"/>
                <outlet property="fromCurrencyAmount" destination="DcH-jP-Qio" id="cp0-Mg-jmW"/>
                <outlet property="fromCurrencyName" destination="Jji-Tj-iQ4" id="trA-Ua-Ocz"/>
                <outlet property="toCurrencyAmount" destination="t6I-4C-sme" id="6Cw-FZ-G3f"/>
                <outlet property="toCurrencyName" destination="cnO-LB-hA3" id="UD3-jh-g0h"/>
                <outlet property="view" destination="iN0-l3-epB" id="nWf-aS-Nvn"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D1J-nC-mP4">
                    <rect key="frame" x="0.0" y="371" width="375" height="296"/>
                    <accessibility key="accessibilityConfiguration" identifier="picker"/>
                </pickerView>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cnO-LB-hA3">
                    <rect key="frame" x="186" y="206" width="173" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="toCurrency">
                        <bool key="isElement" value="NO"/>
                    </accessibility>
                    <constraints>
                        <constraint firstAttribute="width" constant="173" id="ErH-KB-h7V"/>
                        <constraint firstAttribute="height" constant="30" id="x7Y-al-LR1"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DcH-jP-Qio">
                    <rect key="frame" x="16" y="140" width="115" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="fromAmount"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="115" id="Ivc-QU-doH"/>
                        <constraint firstAttribute="height" constant="30" id="ca4-BX-fmF"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t6I-4C-sme">
                    <rect key="frame" x="16" y="206" width="115" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="toAmount">
                        <bool key="isElement" value="NO"/>
                    </accessibility>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="AyE-oW-1xf"/>
                        <constraint firstAttribute="width" constant="115" id="ier-XH-4kT"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jji-Tj-iQ4">
                    <rect key="frame" x="186" y="140" width="173" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="fromCurrency">
                        <bool key="isElement" value="NO"/>
                    </accessibility>
                    <constraints>
                        <constraint firstAttribute="width" constant="173" id="6B8-0o-Ajd"/>
                        <constraint firstAttribute="height" constant="30" id="Iez-K6-5Yd"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                </textField>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="view"/>
            <constraints>
                <constraint firstItem="D1J-nC-mP4" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="0TU-Ig-JXQ"/>
                <constraint firstItem="Jji-Tj-iQ4" firstAttribute="leading" secondItem="t6I-4C-sme" secondAttribute="trailing" constant="55" id="0kP-yO-HqT"/>
                <constraint firstItem="t6I-4C-sme" firstAttribute="top" secondItem="DcH-jP-Qio" secondAttribute="bottom" constant="36" id="1vH-SB-f9l"/>
                <constraint firstItem="DcH-jP-Qio" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="Dq0-Ty-hQp"/>
                <constraint firstItem="DcH-jP-Qio" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="120" id="LUK-ot-4gy"/>
                <constraint firstItem="D1J-nC-mP4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Uez-Cy-quO"/>
                <constraint firstItem="cnO-LB-hA3" firstAttribute="leading" secondItem="DcH-jP-Qio" secondAttribute="trailing" constant="55" id="c3m-26-YzZ"/>
                <constraint firstItem="t6I-4C-sme" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="dxH-Wv-g9e"/>
                <constraint firstItem="cnO-LB-hA3" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="186" id="fSg-KE-fl7"/>
                <constraint firstItem="D1J-nC-mP4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="351" id="oPN-sf-BnB"/>
                <constraint firstItem="D1J-nC-mP4" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="oWp-Ke-x66"/>
                <constraint firstItem="Jji-Tj-iQ4" firstAttribute="top" secondItem="cnO-LB-hA3" secondAttribute="bottom" constant="-96" id="tZC-gK-qsb"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <point key="canvasLocation" x="34.5" y="54.5"/>
        </view>
    </objects>
</document>
